revised header of a whale

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  4    <title></title>
  5  </head>
  6  <body>
- 7    <h1>hello, world</h1>
+ 7    <h1>A whale of greeting</h1>
  8    <p>Call me Ishmael.</p>
  9  </body>
 10</html>
